<resources>
    <string name="app_name">TAAM Collection Management App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>

    <!-- New -->
    <string name="admin">ADMIN</string>
    <string name="adminBack">BACK</string>
    <string name="view">VIEW</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="report">REPORT</string>
    <string name="search">SEARCH</string>

    <string name="col1"> </string>
    <string name="col2">Lot#</string>
    <string name="col3">Name</string>
    <string name="col4">Category</string>
    <string name="col5">Period</string>
    <string name="col6">Description</string>
    <string name="col7">Picture/Video</string>
    <string name="image_video">Image/Video</string>

    <string-array name="categories_array">
        <item></item>
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass and Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>

    <string-array name="periods_array">
        <item></item>
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>Hang</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>

    <string-array name="type_array">
        <item>Lot#</item>
        <item>Name</item>
        <item>Category</item>
        <item>Period</item>
        <item>Category Desc./Pic.</item>
        <item>Period Desc./Pic.</item>
        <item>All</item>
        <item>All Desc./Pic.</item>


    </string-array>

</resources>