<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/noSelect"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="No item selected"
        android:textColor="#E20303"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchHomeScreenBack" />

    <include
        android:id="@+id/expandableListView"
        layout="@layout/custom_expandable_list_fragment" />

    <!-- Admin Button (Top Right Corner) -->
    <Button
        android:id="@+id/admin"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- View Button -->

    <Button
        android:id="@+id/adminBack"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="LOG OUT"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Search Button -->
    <Button
        android:id="@+id/search"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view" />

    <Button
        android:id="@+id/searchHomeScreenBack"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/adminBack"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search" />

    <TextView
        android:id="@+id/searchBasedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/oswald_bold"
        android:paddingTop="4dp"
        android:text=""
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/searchHomeScreenBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/admin"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/remove"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/remove"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/report"
        style="@style/ButtonStyle"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/report"
        app:layout_constraintEnd_toStartOf="@+id/remove"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>
